--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -21,13 +21,13 @@
 
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/toolbarTitleTv"
+                style="@style/ToolbarTitleStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:gravity="center"
-                android:text="@string/add_money"
-                style="@style/ToolbarTitleStyle" />
+                android:text="@string/add_money" />
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -62,11 +62,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/blc"
+                android:layout_toEndOf="@+id/blc"
                 android:fontFamily="@font/roboto_bold_1"
                 android:gravity="center_vertical"
                 android:padding="@dimen/_10sdp"
-                android:text="$ 500.00"
+                android:text="500.00 OMR"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_11sdp" />
 
@@ -79,7 +79,8 @@
                 android:background="@color/violet"
                 android:padding="@dimen/_10sdp"
                 android:src="@mipmap/moneygrey"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
@@ -90,40 +91,52 @@
             android:layout_below="@+id/rel_new"
             android:background="@color/white"
             android:padding="@dimen/_10sdp">
-
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/tvlabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:fontFamily="@font/roboto_regular_0"
+                android:gravity="center_vertical"
+                android:hint="@string/amount_dollar"
+                android:paddingStart="@dimen/_10sdp"
+                android:textColor="@color/grey_color_txt"
+                android:textSize="@dimen/_10sdp" />
             <RelativeLayout
+                android:layout_below="@+id/tvlabel"
                 android:id="@+id/rl_addmoney"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/til_add_money"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toStartOf="@+id/tv_have_promocode"
-                    android:background="@null"
-                    android:hint="@string/amount_dollar">
+                <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:id="@+id/til_add_money"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_toStartOf="@+id/tv_have_promocode"-->
+                <!--android:hint="@string/amount_dollar"-->
+                <!--android:textColorHint="@color/colorPrimary">-->
 
-                    <android.support.v7.widget.AppCompatEditText
-                        android:id="@+id/edt_profile_first_name"
-                        style="@style/EditTextHint"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="5"
-                        android:background="@null"
-                        android:fontFamily="@font/roboto_regular_0"
-                        android:imeOptions="actionNext"
-                        android:inputType="number"
-                        android:textColor="@color/black"
-                        android:paddingStart="@dimen/_10sdp"
-                        android:textSize="@dimen/_12sdp" />
-                </android.support.design.widget.TextInputLayout>
+                <android.support.v7.widget.AppCompatEditText
+                    android:id="@+id/edt_profile_first_name"
+                    android:layout_width="0dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:fontFamily="@font/roboto_regular_0"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"
+                    android:hint="@string/amount_dollar"
+                    android:layout_toStartOf="@+id/tv_have_promocode"
+                    android:padding="@dimen/_10sdp"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp" />
+                <!--</android.support.design.widget.TextInputLayout>-->
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_have_promocode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
                     android:fontFamily="@font/roboto_regular_0"
                     android:gravity="center_vertical"
@@ -152,8 +165,8 @@
                 android:background="@color/colorPrimary"
                 android:fontFamily="@string/search"
                 android:gravity="center"
-                android:textAllCaps="false"
                 android:text="@string/add_money"
+                android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_13sdp" />
 
