--- a/app/src/main/res/layout/brand_row_selector.xml
+++ b/app/src/main/res/layout/brand_row_selector.xml
@@ -21,6 +21,7 @@
         android:textSize="@dimen/_12sdp" />
 
     <android.support.v7.widget.AppCompatTextView
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/brandNameTv"
         android:layout_width="wrap_content"
