--- a/app/src/main/res/layout/category_row_selector.xml
+++ b/app/src/main/res/layout/category_row_selector.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="wrap_content"
     android:background="@color/violet">
 
@@ -35,19 +36,20 @@
 
                 <TextView
                     android:id="@+id/categoryNameTv"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
+                    android:gravity="start"
                     android:textSize="@dimen/_13sdp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/subCategoryNameTv"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/categoryNameTv"
                     android:layout_alignParentStart="true"
-
+                    android:gravity="start"
                     android:textSize="@dimen/_11sdp" />
             </RelativeLayout>
 
