--- a/app/src/main/res/layout/delivery_address_item.xml
+++ b/app/src/main/res/layout/delivery_address_item.xml
@@ -46,6 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_5sdp"
+                    android:padding="@dimen/_2sdp"
                     android:layout_toEndOf="@+id/deliverAddressTypeName"
 
                     android:layout_weight="1"
@@ -86,8 +87,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-
                     android:layout_weight="1"
+                    android:paddingTop="@dimen/_3sdp"
+                    android:paddingLeft="@dimen/_5sdp"
                     android:singleLine="true"
                     android:text="Sheikh Mohammed Bin Zayed Rd- Dubai United Kingdom" />
 
