--- a/app/src/main/res/layout/filter_products.xml
+++ b/app/src/main/res/layout/filter_products.xml
@@ -87,7 +87,7 @@
                 android:id="@+id/tv_min_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
                 android:textColor="@color/lightblack"
                 android:textSize="@dimen/_10sdp" />
 
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:textColor="@color/lightblack"
-                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:textSize="@dimen/_10sdp" />
         </RelativeLayout>
 
