--- a/app/src/main/res/layout/product_request_row.xml
+++ b/app/src/main/res/layout/product_request_row.xml
@@ -6,25 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_5sdp"
-    android:layoutDirection="ltr"
     app:cardCornerRadius="0dp"
     cardview:cardElevation="@dimen/_5sdp">
 
-
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="@dimen/_10sdp">
-
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:paddingStart="@dimen/_8sdp"
             android:paddingTop="@dimen/_2sdp"
             android:paddingEnd="@dimen/_5sdp"
-            android:text="wewe"
+            android:text="@string/request"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp" />
 
@@ -35,93 +34,100 @@
             android:layout_marginTop="@dimen/_5sdp"
             android:paddingStart="@dimen/_8sdp"
             android:paddingEnd="@dimen/_5sdp"
-            android:text="Reply: "
+            android:text="@string/reply"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
-
-        <android.support.v7.widget.AppCompatTextView
-            android:id="@+id/txt_date"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_5sdp"
-            android:text="4 June, 18"
-            android:textColor="@color/violet_2"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintTop_toBottomOf="@+id/txt_reply" />
+            android:layout_gravity="start">
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="@dimen/_1sdp"
-            android:layout_height="@dimen/_15sdp"
-            android:layout_marginLeft="15dp"
-            android:background="@color/violet_2"
-            app:layout_constraintBottom_toBottomOf="@id/txt_date"
-            app:layout_constraintStart_toEndOf="@id/txt_date"
-            app:layout_constraintTop_toBottomOf="@+id/txt_reply" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/_4sdp"
+                android:layout_toStartOf="@+id/ll"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/txt_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_30sdp"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_5sdp"
-            android:text="4 June, 18"
-            android:textColor="@color/violet_2"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintStart_toEndOf="@id/txt_date"
-            app:layout_constraintTop_toBottomOf="@id/txt_reply" />
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/txt_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingEnd="@dimen/_5sdp"
+                    android:text="@string/date_colon"
+                    android:textColor="@color/violet_2"
+                    android:textSize="@dimen/_12sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/txt_reply" />
 
-        <LinearLayout
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="@dimen/_15sdp"
+                    android:background="@color/violet_2" />
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_reply">
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingEnd="@dimen/_5sdp"
+                    android:text="@string/date_colon"
+                    android:textColor="@color/violet_2"
+                    android:textSize="@dimen/_12sdp" />
+            </LinearLayout>
 
             <RelativeLayout
-                android:visibility="gone"
-                android:id="@+id/txt_edit"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp">
+                android:id="@+id/ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <RelativeLayout
+                    android:id="@+id/txt_edit"
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
-                    android:src="#F3F3F3"
-                    android:textColor="@color/colorPrimary"
-                    app:civ_border_color="@color/white"
-                    app:civ_border_width="0.2dp" />
+                    android:layout_alignParentStart="true"
+                    android:visibility="gone">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_25sdp"
+                        android:src="#F3F3F3"
+                        android:textColor="@color/colorPrimary"
+                        app:civ_border_color="@color/white"
+                        app:civ_border_width="0.2dp" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="@dimen/_25sdp"
+                        android:layout_height="@dimen/_25sdp"
+                        android:padding="@dimen/_6sdp"
+                        android:src="@mipmap/edit"
+                        android:text="@string/edit"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="@dimen/_10sdp" />
+
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.AppCompatImageView
+                    android:id="@+id/txt_delete"
                     android:layout_width="@dimen/_25sdp"
                     android:layout_height="@dimen/_25sdp"
-                    android:padding="@dimen/_6sdp"
-                    android:src="@mipmap/edit"
-                    android:text="@string/edit"
+                    android:layout_marginStart="@dimen/_3sdp"
+                    android:layout_toEndOf="@+id/txt_edit"
+                    android:src="@mipmap/delete"
+                    android:text="@string/delete"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="@dimen/_10sdp" />
-
-
+                    android:textSize="@dimen/_10sdp"
+                    android:visibility="gone" />
             </RelativeLayout>
-
-            <android.support.v7.widget.AppCompatImageView
-                android:visibility="gone"
-                android:id="@+id/txt_delete"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginStart="@dimen/_3sdp"
-                android:src="@mipmap/delete"
-                android:text="@string/delete"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
