--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
@@ -15,19 +17,19 @@
             android:id="@+id/card_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            card_view:cardBackgroundColor="@color/white"
             card_view:cardCornerRadius="@dimen/_3sdp"
             card_view:cardElevation="@dimen/_3sdp"
             card_view:cardPreventCornerOverlap="false"
             card_view:cardUseCompatPadding="true"
-            card_view:cardBackgroundColor="@color/white"
             card_view:elevation="@dimen/_6sdp">
 
             <ImageView
                 android:id="@+id/productImageIv"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:layout_margin="@dimen/_5sdp"
                 android:background="?attr/selectableItemBackgroundBorderless"
@@ -43,58 +45,67 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_toEndOf="@+id/card_view"
             android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_title"
-                style="@style/LightBlackTextColorStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_20sdp"
-                android:maxLines="4"
-                android:layout_weight="1"
-                android:text="Paid for Order"
-                android:textColor="@color/black"
-                android:textStyle="normal"
-                android:textSize="@dimen/_10sdp"/>
-            <TextView
-                android:id="@+id/tv_price"
-                style="@style/OrangeTextColorStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="- 50 OMR"
-                android:textSize="@dimen/_10sdp"
-                android:paddingTop="@dimen/_2sdp" />
-</LinearLayout>
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    style="@style/LightBlackTextColorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:layout_toStartOf="@+id/tv_price"
+                    android:maxLines="4"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    android:text="Paid for Order"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:id="@+id/tv_price"
+                    style="@style/OrangeTextColorStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:paddingTop="@dimen/_2sdp"
+                    android:text="- 50 OMR"
+                    android:textSize="@dimen/_10sdp"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    tools:layout_editor_absoluteY="0dp" />
+            </android.support.constraint.ConstraintLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginTop="@dimen/_2sdp"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical">
+                android:orientation="horizontal">
 
                 <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/tv_product_categories"
+                    style="@style/LightBlackTextColorStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="To Kraft And Singles"
                     android:gravity="center_vertical"
-                    style="@style/LightBlackTextColorStyle"
-                    android:textColor="@color/lightblack"
-                    />
+                    android:text="To Kraft And Singles"
+                    android:textColor="@color/lightblack" />
 
             </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_product_quantity"
                 style="@style/OrangeTextColorStyle"
-                android:layout_width="match_parent"
-                android:textSize="@dimen/_10sdp"
-                android:textColor="@color/violet_1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:paddingTop="@dimen/_2sdp"
                 android:text="8:03 AM"
-                android:paddingTop="@dimen/_2sdp" />
-
+                android:textColor="@color/violet_1"
+                android:textSize="@dimen/_10sdp" />
 
 
         </LinearLayout>
@@ -103,8 +114,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#fde4df"
-        android:layout_below="@+id/relativeLayout"/>
+        android:layout_below="@+id/relativeLayout"
+        android:background="#fde4df" />
 
 
 </RelativeLayout>
