--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -62,15 +62,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_toRightOf="@+id/blc"
+                android:layout_toEndOf="@+id/blc"
                 android:fontFamily="@font/roboto_bold_1"
                 android:gravity="center_vertical"
                 android:padding="@dimen/_10sdp"
-                android:text="$ 500.00"
+                android:text="500.00 OMR"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_11sdp" />
 
             <android.support.v7.widget.AppCompatImageView
+                android:visibility="gone"
                 android:id="@+id/imv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
