--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -33,9 +34,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
+        app:layout_constraintTop_toBottomOf="@+id/appBar"
         android:id="@+id/rel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
 
         <RelativeLayout
             android:id="@+id/rel_new"
@@ -66,7 +71,6 @@
                 android:fontFamily="@font/roboto_bold_1"
                 android:gravity="center_vertical"
                 android:padding="@dimen/_10sdp"
-                android:text="500.00 OMR"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_11sdp" />
 
@@ -96,14 +100,14 @@
                 android:id="@+id/transactionRV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/btn_accept_order"></android.support.v7.widget.RecyclerView>
+                android:layout_above="@+id/btn_accept_order" />
 
 
             <Button
+
                 android:id="@+id/btn_accept_order"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_35sdp"
-                android:layout_below="@+id/view"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="@dimen/_10sdp"
@@ -116,7 +120,18 @@
                 android:textSize="@dimen/_13sdp" />
 
         </RelativeLayout>
+        <include
+            android:id="@+id/progressBar"
+            layout="@layout/progress_dialog_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </RelativeLayout>
+
     <!-- <TextView
          android:id="@+id/tv_have_promo_code"
          android:layout_width="wrap_content"
@@ -127,4 +142,4 @@
          android:layout_toRightOf="@+id/til_add_money"
          android:text="@string/have_a_promo_code" />-->
 
-</LinearLayout>
+</android.support.v7.widget.LinearLayoutCompat>
