--- a/app/src/main/res/layout/activity_choosedeliverytype.xml
+++ b/app/src/main/res/layout/activity_choosedeliverytype.xml
@@ -35,6 +35,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
+            android:visibility="gone"
             android:background="@color/violet"
             android:id="@+id/deliver_now"
             android:layout_width="match_parent"
@@ -53,7 +54,7 @@
                 android:layout_width="wrap_content"
 
                 android:layout_height="@dimen/_25sdp"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@color/colorPrimary"
