--- a/app/src/main/res/layout/delivery_details_activity.xml
+++ b/app/src/main/res/layout/delivery_details_activity.xml
@@ -31,5 +31,14 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_delivery_details_activity" />
-
+    <include
+        android:id="@+id/progressBar"
+        layout="@layout/progress_dialog_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.design.widget.CoordinatorLayout>
