--- a/app/src/main/res/layout/discounts_row.xml
+++ b/app/src/main/res/layout/discounts_row.xml
@@ -49,11 +49,10 @@
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/offerDescriptionTv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/_8sdp"
             android:paddingEnd="@dimen/_5sdp"
-            android:text="wewe"
             android:textColor="@color/violet_1"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,10 +72,9 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/activeOfferImage"
             app:layout_constraintEnd_toEndOf="@+id/activeOfferImage"
-            app:layout_constraintStart_toStartOf="@+id/activeOfferImage"
             android:paddingBottom="@dimen/_2sdp"
             android:textColor="@color/black"
-            android:text="25%"/>
+            android:text="OMR"/>
 
 
         <TextView
