--- a/app/src/main/res/layout/layout_loyalty_point_transaction_item.xml
+++ b/app/src/main/res/layout/layout_loyalty_point_transaction_item.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/_10sdp"
-            android:text="Loyalty point earned"
+            android:text="Loyalty balance earned"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp"
             app:layout_constraintStart_toEndOf="@id/userImageIv" />
@@ -54,8 +54,8 @@
 
         <TextView
             android:id="@+id/amountTv"
-            android:layout_width="32dp"
-            android:layout_height="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:paddingStart="@dimen/_10sdp"
             android:text="200"
             android:textColor="@color/black"
