--- a/app/src/main/res/layout/product_list_all_child.xml
+++ b/app/src/main/res/layout/product_list_all_child.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="@dimen/_150sdp"
+    android:layout_width="@dimen/_120sdp"
     android:layout_height="wrap_content"
     android:id="@+id/productListRootLL">
 
@@ -22,16 +22,18 @@
             <ImageView
                 android:id="@+id/imv_product"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_140sdp"
+                android:layout_height="@dimen/_120sdp"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/cartt"
                 android:scaleType="centerCrop"/>
             <TextView
-                android:layout_below="@+id/imv_product"
                 android:id="@+id/outOfStockTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_120sdp"
                 android:layout_gravity="center"
+                android:fontFamily="@font/roboto_bold_1"
+                android:gravity="center"
+                android:background="#99FFFFFF"
                 android:text="@string/out_of_stock"
                 android:textColor="@android:color/holo_red_light"
                 android:textSize="@dimen/_10sdp"
@@ -42,14 +44,12 @@
                 android:id="@+id/tv_quantity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@id/imv_product"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:background="@color/colorPrimary"
+                android:layout_alignBottom="@+id/imv_product"
+                android:layout_alignBaseline="@+id/imv_product"
                 android:padding="@dimen/_4sdp"
-                android:text="@string/quantity"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_10sdp" />
+                android:textSize="@dimen/_8sdp" />
 
             <TextView
                 android:id="@+id/tv_product_title"
@@ -60,17 +60,16 @@
                 android:maxLines="1"
                 android:paddingEnd="@dimen/_6sdp"
                 android:paddingStart="@dimen/_8sdp"
-                android:paddingTop="@dimen/_6sdp"
+                android:paddingTop="@dimen/_4sdp"
                 android:text="@string/kraft_singles"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_11sdp" />
 
             <TextView
                 android:id="@+id/tv_product_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_product_title"
-                android:paddingBottom="@dimen/_6sdp"
                 android:paddingEnd="@dimen/_6sdp"
                 android:paddingStart="@dimen/_8sdp"
                 android:textStyle="bold"
@@ -81,8 +80,9 @@
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_product_title"
-                android:layout_toEndOf="@+id/tv_product_amount"
+                android:paddingEnd="@dimen/_6sdp"
+                android:paddingStart="@dimen/_8sdp"
+                android:layout_below="@+id/tv_product_amount"
                 android:id="@+id/original_price_layout">
 
             <TextView
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_below="@id/tv_product_amount"
+                android:layout_below="@id/tv_product_title"
                 android:gravity="center_vertical">
 
                 <android.support.v7.widget.AppCompatImageButton
@@ -123,7 +123,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:paddingEnd="@dimen/_3sdp"
+                    android:paddingBottom="@dimen/_6sdp"
+                    android:paddingEnd="@dimen/_6sdp"
                     android:paddingStart="@dimen/_6sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/notification"
@@ -137,20 +138,21 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:paddingBottom="@dimen/_6sdp"
-                    android:paddingEnd="@dimen/_3sdp"
+                    android:paddingEnd="@dimen/_6sdp"
                     android:paddingStart="@dimen/_6sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/addcart" />
 
                 <android.support.v7.widget.AppCompatImageView
+                    android:visibility="gone"
                     android:id="@+id/addToWishList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:paddingBottom="@dimen/_6sdp"
+                    android:paddingBottom="@dimen/_3sdp"
+                    android:paddingTop="@dimen/_5sdp"
                     android:paddingEnd="@dimen/_8sdp"
                     android:paddingStart="@dimen/_3sdp"
-                    android:paddingTop="@dimen/_6sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/wishlistgrey"
                     android:tint="@color/buttonOrangeColor" />
