--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -5,8 +5,8 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layoutDirection="ltr"
     app:cardCornerRadius="0dp"
+    android:layout_marginBottom="0.2dp"
     cardview:cardElevation="@dimen/_5sdp">
 
 
@@ -22,12 +22,14 @@
             android:paddingStart="@dimen/_8sdp"
             android:paddingTop="@dimen/_2sdp"
             android:paddingEnd="@dimen/_5sdp"
+            app:layout_constraintStart_toStartOf="parent"
             android:text="wewe"
             android:textColor="@color/black"
             android:textSize="@dimen/_14sdp"
             android:textStyle="bold" />
 
         <LinearLayout
+            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/rate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,6 +61,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.AppCompatTextView
+            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/txt_review"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -70,6 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/rate" />
 
         <android.support.v7.widget.AppCompatTextView
+            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/txt_"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
